# zed-file-context-server

./: .gitignore  Cargo.toml  LICENSE  README.md  Release.sh  build.rs  extension.toml
.backups/626d8549e79156b2/: README.md_20250316_182905.437.bak
.cursor/rules/: README.md  project.json  rust.json  terraform.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
rules/: README.md
rules/general/: 000_init.md
rules/mcp/: 000_protocol.md
rules/rust/: 000_coding_style.md  001_architecture.md
rules/terraform/: 000_terraform_standards.md
src/: file_model_context.rs  main.rs
src/config/: mod.rs
src/core/: mcedit.rs  mod.rs
src/diff/: generator.rs  mod.rs
src/editor/: file_editor.rs  mod.rs
src/file_service/: backup.rs  mod.rs  service.rs
src/mcp/: handler.rs  stdio.rs
src/project/: analyzer.rs  mod.rs
src/shared/: logging.rs  mod.rs
src/shared/utils/: path.rs
src/suggestions/: applier.rs  mod.rs  parser.rs
